@@ -492,6 +492,7 @@ public.test5978.geometry SRID:4326 TYPE:POINT DIMS:2
 public|test5829|geom|2|4326|GEOMETRY
 public|test5978|geometry|2|4326|POINT
 public|test5978|shape|2|4326|POINT
+#4828|4326
 #5987|LINESTRING(20 20,20.1 20,20.2 19.9)|LINESTRING(20 20,20.1 20,20.2 19.9)
 #5962|MULTIPOINT((1 1),(3 4))|POINT(1 1)
 #5754|LINESTRING(0 0,1 1,2 0,3 1,4 0)|LINESTRING(0 0,1 1,2 0,3 1,4 0)|POLYGON((0 0,1 0,1 1,0 1,0 0))|POLYGON((0 0,10 0,10 10,0 10,0 0),(1 1,1 2,2 2,2 1,1 1))
